[gd_scene load_steps=2 format=3 uid="uid://dx82ngo7ob8ci"]

[ext_resource type="Script" uid="uid://ce6t7mb0r5sta" path="res://Scripts/battle_manager.gd" id="1_r0ul7"]

[node name="BattleManager" type="Node2D"]
script = ExtResource("1_r0ul7")

[node name="BattleUI_Anim_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.2
one_shot = true
ignore_time_scale = true

[node name="Attack_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[node name="Defend_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[node name="Question_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[node name="Enemy_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
ignore_time_scale = true
